# sansHacq

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
sanshacq/: n_gram.py  ner_tagging.py  pdf2text.py  quickFix.py  token_voc.py  unlocq_books.py
tests/: test_sanshacq.py
