[tool.poetry]
name = "sansHacq"
version = "0.1.0"
description = ""
authors = ["3lLobo <flocwolf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyPDF2 = "^2.10.0"
black = "^22.6.0"
flair = "^0.11.3"
python-env = "^1.0.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
